BUGFIX: Post preview on mobile

--- a/app/styles/_media.scss
+++ b/app/styles/_media.scss
@@ -97,7 +97,7 @@
       margin-bottom: 1rem;
     }
     .main{
-      padding-top: 43px;
+      padding-top: 43px !important;
       .main-content{
         background: none !important;
       }
